kubernetes-files/winterfell-infra/winterfell-infra-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-traefik
  namespace: winterfell-infra
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /ping
