kubernetes-files/winterfell-infra/winterfell-infra-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: winterfell-infra
  labels:
    name: winterfell-infra
