kubernetes-files/winterfell-infra/winterfell-infra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: winterfell-ingress
  namespace: winterfell-infra
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: winterfell-infra-mw-traefik@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /ping
            backend:
              service:
                name: winterfell-ping
                port:
                  number: 80
